--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,42 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.3.72'
+
+    ext.versionMajor = 1
+    ext.versionMinor = 0
+    ext.versionBuildNumber = Integer.valueOf(findProperty("buildNumber") ?: 0)
+
+    ext.androidVersions = [
+            'build_tools'         : '29.0.2',
+            'compile_sdk'         : 29,
+            'target_sdk'          : 29,
+            'min_sdk'             : 21,
+            'android_version_code': (versionMajor * 100_000) + (versionMinor * 10_000) + versionBuildNumber,
+            'android_version_name': "${versionMajor}.${versionMinor}"
+    ]
+
+    ext.versions = [
+            // External dependencies
+            'appcompat'        : '1.1.0',
+            'constraint_layout': '1.1.3',
+            'core_ktx'         : '1.2.0',
+            'gradle'           : '3.6.3',
+            'kotlin'           : '1.3.72',
+
+            // Test dependencies
+            'junit'            : '4.12',
+
+            // Instrumentation test dependencies
+            'android_junit'    : '1.1.1',
+            'espresso_core'    : '3.2.0'
+    ]
+
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:${versions.gradle}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
     }
 }
 
