--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
 
             // Test dependencies
             'junit'            : '4.12',
+            'mockk'            : '1.10.0',
 
             // Instrumentation test dependencies
             'android_junit'    : '1.1.1',
