Add kotlinx coroutines dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:${versions.constraint_layout}"
     implementation "androidx.core:core-ktx:${versions.core_ktx}"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.kotlinx}"
 
     // Test dependencies
     testImplementation "junit:junit:${versions.junit}"
