--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
             'core_ktx'         : '1.2.0',
             'gradle'           : '3.6.3',
             'kotlin'           : '1.3.72',
+            'kotlinx'          : '1.3.7',
 
             // Test dependencies
             'junit'            : '4.12',
