--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
             'constraint_layout': '1.1.3',
             'core_ktx'         : '1.2.0',
             'gradle'           : '3.6.3',
+            'koin'             : '2.1.5',
             'kotlin'           : '1.3.72',
             'kotlinx'          : '1.3.7',
 
