--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
             'koin'             : '2.1.5',
             'kotlin'           : '1.3.72',
             'kotlinx'          : '1.3.7',
+            'lifecycle'        : '2.2.0',
 
             // Test dependencies
             'junit'            : '4.12',
