--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
             'kotlin'           : '1.3.72',
             'kotlinx'          : '1.3.7',
             'lifecycle'        : '2.2.0',
+            'material'         : '1.1.0',
             'navigation'       : '2.2.2',
 
             // Test dependencies
