--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
+
     }
 }
 
