--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
     ext.versions = [
             // External dependencies
             'appcompat'        : '1.1.0',
+            'epoxy'            : '3.11.0',
             'constraint_layout': '1.1.3',
             'core_ktx'         : '1.2.0',
             'gradle'           : '3.6.3',
@@ -38,7 +39,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${versions.gradle}"
