--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
         versionName androidVersions.android_version_name
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -57,6 +63,8 @@ dependencies {
     implementation 'com.github.tiper:MaterialSpinner:1.4.2'
     implementation "androidx.navigation:navigation-fragment-ktx:${versions.navigation}"
     implementation "androidx.navigation:navigation-ui-ktx:${versions.navigation}"
+    implementation "androidx.room:room-runtime:${versions.room}"
+    kapt "androidx.room:room-compiler:${versions.room}"
 
     // Test dependencies
     testImplementation "org.koin:koin-test:${versions.koin}"
