--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
             'lifecycle'        : '2.2.0',
             'material'         : '1.1.0',
             'navigation'       : '2.2.2',
+            'room'             : '2.2.5',
 
             // Test dependencies
             'junit'            : '4.12',
